	* include/prototype.h, noweb/o_find.nw, noweb/x_event.nw:
	Fixed issue with the selection box when some components overlap.
	This bug was introduced when adding support for object movement	
	like "click and drag" style.
	
2006-05-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/notangle_guile.in: Applied patch by Steve Brown to fix
	guile stack overflow

2006-05-17  Mike Jarabek  <mjarabek@istop.com>

	* examples/drawing_primitives.sch
	  Added example file with a sample of each drawing primitive
	* examples/Makefile.am
	  Added target to distribute drawing primitive schematic

2006-05-17 Carlos Nieves Onega <cnieves@iespana.es>
	* include/i_vars.h, include/prototype.h, lib/system-gschemrc.in,
	  noweb/i_vars.nw, noweb/o_find.nw:
	  Added support for moving the selected objects just dragging them.
	* include/prototype.h, include/x_states.h, noweb/g_keys.nw,
	  noweb/g_rc.nw, noweb/g_register.nw, noweb/i_basic.nw,
	  noweb/i_callbacks.nw, noweb/o_basic.nw:
	  Added multiple copy command.
	* noweb/o_copy.nw, noweb/o_move.nw, noweb/o_undo.nw,
	  include/prototype.h, noweb/x_event.nw:
	  Allow rotating while copying or moving objects.
	* noweb/g_hook.nw, noweb/o_complex.nw, noweb/o_misc.nw:
	  Don't draw text if w_current->DONT_REDRAW == 1.
	
2006-05-16 22:31  Dan McMahill <danmc>

	* include/Makefile.am, include/prototype.h, noweb/g_funcs.nw,
	  noweb/g_register.nw, noweb/x_dialog.nw, scheme/pcb.scm: Add a
	  (gschem-filesel) guile function which gives a generic file open
	  and save as dialog box.  Add some placeholder code to the pcb
	  major mode showing how this routine is used.	While here update
	  the pcb major mode TODO list a bit.

2006-05-16 Werner Hoch <werner.ho@gmx.de>:

	* noweb/o_pin.nw: o_pin_end(): fixed whichend drawing and 
	  connection checks.

2006-05-14 Werner Hoch <werner.ho@gmx.de>

	* noweb/x_event.nw: x_event_expose(): fixed some of the redraw error
	  when changing the windows while drawing
