@@ -55,7 +55,8 @@ src: $(gschem_SOURCES)
 SUFFIXES = .nw
 
 .nw.c:
-	$(NOTANGLE) $(NOTANGLEFLAGS) $(NOTANGLEROOT)'$@ : *' $< > ../src/$@
+	$(NOTANGLE) $(NOTANGLEFLAGS) $(NOTANGLEROOT)'$@ : *' $< > ../src/$@.tmp
+	mv -f ../src/$@.tmp ../src/$@
 	$(INDENTBIN) $(INDENTFLAG) ../src/$@
 	rm -f ../src/$@~
 
