@@ -49,7 +49,8 @@ src: $(libgeda_la_SOURCES)
 SUFFIXES = .nw
 
 .nw.c:
-	$(NOTANGLE) $(NOTANGLEFLAGS) $(NOTANGLEROOT)'$@ : *' $< > ../src/$@
+	$(NOTANGLE) $(NOTANGLEFLAGS) $(NOTANGLEROOT)'$@ : *' $< > ../src/$@.tmp
+	mv -f ../src/$@.tmp ../src/$@
 	$(INDENTBIN) $(INDENTFLAG) ../src/$@
 	rm -f ../src/$@~
 
